Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ic1d704580d378aceba24a558590c41bf16b97b07

Former-commit-id: 130ca8d8697a6b5138d698b8542d97b103738a45

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Slaan oor"</string>
     <string name="next_label" msgid="1248293387735652187">"Volgende"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Tale"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Voorkeurtaalvolgorde"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Stelseltaal"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Verwyder"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Voeg \'n taal by"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Taal"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Voorkeurtaal"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Programtale"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Programtale"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Stel die taal vir elke program"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Programtaal"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Programtaal"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Voorgestelde tale"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle tale"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Stelseltaal"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Taalkeuse vir hierdie program is nie in Instellings beskikbaar nie."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Taal kan verskil van tale wat in die program beskikbaar is. Sommige programme steun dalk nie hierdie instelling nie."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Net programme wat taalkeuses ondersteun, word hier gewys."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Jou stelsel, programme en webwerwe gebruik die eerste gesteunde taal uit jou voorkeurtale."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Gaan na programtaalinstellings vir elke program om ’n taal te kies."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Kom meer te wete oor tale"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Verwyder gekose tale?</item>
       <item quantity="one">Verwyder gekose taal?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teks sal in \'n ander taal gewys word."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kan nie alle tale verwyder nie"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Hou minstens een voorkeurtaal"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nie beskikbaar as stelseltaal nie"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Sal dalk in sommige programme nie beskikbaar wees nie"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Skuif op"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Skuif af"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Skuif na bo"</string>
