--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Adlayın"</string>
     <string name="next_label" msgid="1248293387735652187">"Sonrakı"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Dillər"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Tərcih edilən dil sırası"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Sistem dili"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Silin"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Dil əlavə edin"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Dil"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Tərcih etdiyiniz dil"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Tətbiq dilləri"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Tətbiq Dilləri"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Hər tətbiq üçün dili ayarlayın"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Tətbiq dili"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Tətbiq Dili"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Təklif edilən dillər"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Bütün dillər"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistem dili"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Bu tətbiq üçün dil seçimini Ayarlardan etmək olmur."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Dil tətbiqdə əlçatan dillərdən fərqli ola bilər. Bəzi tətbiqlər bu ayarı dəstəkləməyə bilər."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Burada yalnız dil seçimini dəstəkləyən tətbiqlər göstərilir."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sisteminiz, tətbiqləriniz və vebsaytlarınız tərcih etdiyiniz dillərdən ilk dəstəklənən dildən istifadə edir."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Hər tətbiqə dil seçmək üçün tətbiq dili ayarlarına keçin."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Dillər haqqında ətraflı məlumat"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Seçilmiş dillər silinsin?</item>
       <item quantity="one">Seçilmiş dil silinsin?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Mətn başqa dildə göstəriləcək."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Bütün dilləri silmək mümkün deyil."</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Ən azı bir tərcih olunmuş dil saxlayın"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Sistem dili kimi əlçatan deyil"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Bəzi tətbiqlərdə əlçatan olmaya bilər"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Yuxarı keçin"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Aşağı keçin"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Ən yuxarı"</string>
