--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Jäta vahele"</string>
     <string name="next_label" msgid="1248293387735652187">"Järgmine"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Keeled"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Eelistatud keelte järjestus"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Süsteemi keel"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Eemalda"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Lisa keel"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Keel"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Eelistatud keel"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Rakenduste keeled"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Rakenduste keeled"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Iga rakenduse keele määramine"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Rakenduse keel"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Rakenduse keel"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Soovitatud keeled"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Kõik keeled"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Süsteemi keel"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Selle rakenduse jaoks pole seadetes keele valimine saadaval."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Keel võib rakenduses saadaolevatest keeltest erineda. Mõni rakendus ei pruugi seda seadet toetada."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Siin on kuvatud ainult rakendused, mis toetavad keele valimist."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Teie süsteem, rakendused ja veebisaidid kasutavad teie eelistatud keelte hulgast esimest toetatud keelt."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Iga rakenduse puhul keele valimiseks avage rakenduse keeleseaded."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Lisateave keelte kohta"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Kas eemaldada valitud keeled?</item>
       <item quantity="one">Kas eemaldada valitud keel?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst kuvatakse teises keeles."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kõiki keeli ei saa eemaldada"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Jätke alles vähemalt üks eelistatud keel"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Pole süsteemikeelena saadaval"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ei pruugi mõnes rakenduses saadaval olla"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Teisalda üles"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Teisalda alla"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Teisalda kõige üles"</string>
