--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Ignorer"</string>
     <string name="next_label" msgid="1248293387735652187">"Suivant"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Langues"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ordre de préférence des langues"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Langue du système"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Supprimer"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Ajouter une langue"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Langue"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Langue favorite"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Langues de l\'application"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Langues des applications"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Configurez la langue pour chaque application"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Langue de l\'application"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Langue de l\'application"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Langues suggérées"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Toutes les langues"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Langue du système"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"La sélection de la langue pour cette application n\'est pas accessible à partir des paramètres."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"La langue peut différer des langues offertes dans l\'application. Certaines applications peuvent ne pas prendre en charge ce paramètre."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Seules les applications qui prennent en charge la sélection de la langue sont affichées ici."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Le système, les applications et les sites web utilisent la première langue prise en charge parmi vos langues préférées."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Pour sélectionner une langue pour chaque application, consultez les paramètres de langue de l\'application."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"En savoir plus sur les langues"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Supprimer la langue sélectionnée?</item>
       <item quantity="other">Supprimer les langues sélectionnées?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Le texte s\'affichera dans une autre langue."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Impossible de supprimer toutes les langues"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Conservez au moins une langue"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Non offerte comme langue du système"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Il est possible que cette langue ne soit pas disponible dans certaines applis."</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Déplacer vers le haut"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Déplacer vers le bas"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Déplacer dans le haut"</string>
