--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Sleppa"</string>
     <string name="next_label" msgid="1248293387735652187">"Áfram"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Tungumál"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Röð kjörtungumála"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Tungumál kerfis"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Fjarlægja"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Bæta við tungumáli"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Tungumál"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Kjörtungumál"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Tungumál forrita"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Tungumál forrits"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Velja tungumál fyrir hvert forrit"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Tungumál forrits"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Tungumál forrits"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Tillögur að tungumálum"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Öll tungumál"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Tungumál kerfis"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Ekki er hægt að velja tungumál fyrir þetta forrit í stillingum."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Tungumál kann að vera frábrugðið tiltækum tungumálum í forritinu. Tiltekin forrit styðja hugsanlega ekki þessa stillingu."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hér eru aðeins birt forrit sem styðja val á tungumáli."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Kerfi, forrit og vefsvæði nota fyrsta studda tungumálið af lista kjörtungumála."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Til að velja tungumál fyrir hvert forrit skaltu fara í tungumálastillingar forrita."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Nánar um tungumál"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Fjarlægja valin tungumál?</item>
       <item quantity="other">Fjarlægja valin tungumál?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Texti mun birtast á öðru tungumáli."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Ekki er hægt að fjarlægja öll tungumál"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Halda að minnsta kosti einu völdu tungumáli"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ekki í boði sem kerfistungumál"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Hugsanlega ekki í boði í sumum forritum"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Færa upp"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Færa niður"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flytja alla leið upp"</string>
