--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -217,15 +217,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Omite"</string>
     <string name="next_label" msgid="1248293387735652187">"Înainte"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Limbi"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ordinea preferată a limbilor"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Limba sistemului"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Elimină"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Adaugă o limbă"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Limbă"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Limba preferată"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Limbile aplicațiilor"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Limbile aplicațiilor"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Setează limba pentru fiecare aplicație"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Limba aplicației"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Limba aplicației"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Limbi sugerate"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Toate limbile"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Limba sistemului"</string>
@@ -233,9 +231,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Selectarea limbii pentru această aplicație din Setări nu este disponibilă."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Limba poate fi alta decât limbile disponibile în aplicație. Este posibil ca unele aplicații să nu accepte această setare."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Aici sunt afișate numai aplicațiile care acceptă selectarea limbii."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistemul, aplicațiile și site-urile folosesc prima limbă acceptată dintre limbile preferate."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ca să selectezi o limbă pentru fiecare aplicație, accesează setările de limbă ale aplicației"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Află mai multe despre limbi"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="few">Elimini limbile selectate?</item>
       <item quantity="other">Elimini limbile selectate?</item>
@@ -244,7 +239,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Textul va fi afișat în altă limbă."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nu pot fi eliminate toate limbile"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Păstrează cel puțin o limbă preferată"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nedisponibilă ca limbă de sistem"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Este posibil să nu fie disponibilă în unele aplicații"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Mută în sus"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Mută în jos"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Mută sus"</string>
