--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -218,15 +218,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Preskočiť"</string>
     <string name="next_label" msgid="1248293387735652187">"Ďalej"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Jazyky"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Poradie preferovaných jazykov"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Jazyk systému"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Odstrániť"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Pridať jazyk"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Jazyk"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Preferovaný jazyk"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Jazyky aplikácií"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Jazyky aplikácií"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Nastavte jazyk pre každú aplikáciu"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Jazyk aplikácie"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Jazyk aplikácie"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Navrhované jazyky"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Všetky jazyky"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Jazyk systému"</string>
@@ -234,9 +232,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Výber jazyka pre túto aplikáciu nie je v Nastaveniach k dispozícii."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Jazyk môže byť iný, ako sú tie, ktoré sú k dispozícii v aplikácii. Niektoré aplikácie nemusia toto nastavenie podporovať."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Zobrazujú sa tu iba aplikácie, ktoré podporujú výber jazyka."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Systém, aplikácie a weby používajú prvý podporovaný jazyk z preferovaných jazykov."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ak chcete vybrať jazyk pre každú aplikáciu, prejdite do nastavení jazyka aplikácie."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Ďalšie informácie o jazykoch"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="few">Odstrániť vybraté jazyky?</item>
       <item quantity="many">Odstrániť vybraté jazyky?</item>
@@ -246,7 +241,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Text sa zobrazí v inom jazyku."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nie je možné odstrániť všetky jazyky"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Ponechajte aspoň jeden preferovaný jazyk"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nie je k dispozícii ako jazyk systému"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Nemusí byť k dispozícii v niektorých aplikáciách"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Presunúť nahor"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Presunúť nadol"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Presunúť na začiatok"</string>
