--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Kapërce"</string>
     <string name="next_label" msgid="1248293387735652187">"Para"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Gjuhët"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Renditja e gjuhëve të preferuara"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Gjuha e sistemit"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Hiqe"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Shto gjuhë"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Gjuha"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Gjuha e preferuar"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Gjuhët e aplikacioneve"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Gjuhët e aplikacionit"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Cakto gjuhën për secilin aplikacion"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Gjuha e aplikacionit"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Gjuha e aplikacionit"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Gjuhët e sugjeruara"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Të gjitha gjuhët"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Gjuha e sistemit"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Zgjedhja e gjuhës për këtë aplikacion nuk ofrohet nga \"Cilësimet\"."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Gjuha mund të ndryshojë nga gjuhët që ofrohen në aplikacion. Disa aplikacione mund të mos e mbështetin këtë cilësim."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Vetëm aplikacionet që mbështetin zgjedhjen e gjuhës shfaqen këtu."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistemi, aplikacionet dhe sajtet e uebit përdorin gjuhën e parë të mbështetur nga gjuhët e tua të preferuara."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Për të zgjedhur një gjuhë për çdo aplikacion, shko te cilësimet e gjuhës së aplikacionit."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Mëso më shumë për gjuhët"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Të hiqet gjuha e zgjedhur?</item>
       <item quantity="one">Të hiqet gjuha e zgjedhur?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teksti do të shfaqet në një gjuhë tjetër."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nuk mund të hiqen të gjitha gjuhët"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Mbaj të paktën një gjuhë të preferuar"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nuk ofrohet si gjuhë sistemi"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Munsd të mos jetë i disponueshëm në disa aplikacione"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Lëvize lart"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Lëvize poshtë"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Lëvize në krye"</string>
