--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Tashlab ketish"</string>
     <string name="next_label" msgid="1248293387735652187">"Keyingisi"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Tillar"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Tanlangan tillar tartibi"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Tizim tili"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Olib tashlash"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Til qo‘shish"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Til"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Tanlangan til"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Ilova tillari"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Ilova tillari"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Har bir ilova uchun tilni sozlash"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Ilova tili"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Ilova tili"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Tavsiya etilgan tillar"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Barcha tillar"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Tizim tili"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Bu ilova uchun Sozlamalardan tilni tanlash imkonsiz"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Bu til ilovadagi tillardan farq qilishi mumkin. Ayrim ilovalarda bu sozlama ishlamaydi."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Faqat til tanlash imkoni bor ilovalar shu yerda chiqadi."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Tizimingiz, ilovalaringiz va veb-saytlaringiz siz tanlagan tillardan birinchi dastaklanadigan tildan foydalanadi."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Har bir ilova uchun til tanlash uchun ilova tili sozlamalariga kiring."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Tillar haqida batafsil"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Tanlangan tillar olib tashlansinmi?</item>
       <item quantity="one">Tanlangan til olib tashlansinmi?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Matnlar keyin boshqa tilda chiqadi."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Barcha tillarni o‘chirib tashlash mumkin emas"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Kamida bitta tilni qoldiring"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Tizim tili sifatida mavjud emas"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ayrim ilovalarda ishlamasligi mumkin"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Tepaga siljitish"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Pastga siljitish"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Tepaga o‘tkazish"</string>
