--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Yeqa"</string>
     <string name="next_label" msgid="1248293387735652187">"Okulandelayo"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Izilimi"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ukuhleleka kolimi oluncanyelwayo"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Ulimi lwesistimu"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Susa"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Engeza ulimi"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Ulimi"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Ulimi oluncanyelwayo"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Izilimi ze-app"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Izilimi ze-App"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Setha ulimi le-app ngayinye"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Ulimi lwe-app"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Ulimi le-app"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Izilimi eziphakanyisiwe"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Zonke izilimi"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Ulimi lwesistimu"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Ukukhetha ulimi kwale app akutholakali Kumasethingi."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Ulimi lungahluka ezilimini ezitholakala ku-app. Amanye ama-app angase angalisekeli leli sethingi."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Ama-app asekela ukukhethwa kolimi kuphela aboniswa lapha."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Amasistimu wakho, ama-app, namawebhusayithi kusebenzisa ulimi olusekelwayo lokuqala kusuka ezilimini zakho ezincanyelwayo."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ukuze ukhethe ulimi lwe-app ngayinye, iya kumasethingi wolimi lwe-app."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Funda kabanzi ngezilimi"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Susa izilimi ezikhethiwe?</item>
       <item quantity="other">Susa izilimi ezikhethiwe?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Umbhalo uzoboniswa ngolunye ulimi."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Ayikwazi ukususa zonke izilimi"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Gcina okungenani ulimi olulodwa oluncanyelwayo"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Akutholakali njengolimi lwesistimu"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Kungenzeka ingatholakali kwezinye izinhlelo zokusebenza"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Iya phezulu"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Iya phansi"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Thumela Phezulu"</string>
