--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ዝለል"</string>
     <string name="next_label" msgid="1248293387735652187">"ቀጥል"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ቋንቋዎች"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"የተመረጠ ቋንቋ ቅደም ተከተል"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"የስርዓት ቋንቋ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"አስወግድ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ቋንቋ አክል"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ቋንቋ"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"የተመረጠ ቋንቋ"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"የመተግበሪያ ቋንቋዎች"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"የመተግበሪያ ቋንቋዎች"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ለእያንዳንዱ መተግበሪያ ቋንቋውን ያዘጋጁ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"የመተግበሪያ ቋንቋ"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"የመተግበሪያ ቋንቋ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"የተጠቆሙ ቋንቋዎች"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ሁሉም ቋንቋዎች"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"የስርዓት ቋንቋ"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ለዚህ መተግበሪያ የቋንቋ መረጣ ከቅንብሮች አይገኝም።"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ቋንቋ በመተግበሪያው ውስጥ ካሉ ቋንቋዎች ሊለያይ ይችላል። አንዳንድ መተግበሪያዎች ይህን ቅንብር ላይደግፉ ይችላሉ።"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"እዚህ የሚታዩት የቋንቋ ምርጫን የሚደግፉ መተግበሪያዎች ብቻ ናቸው።"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"የእርስዎ ስርዓት፣ መተግበሪያዎች እና ድር ጣቢያዎች ከእርስዎ የተመረጡ ቋንቋዎች ውስጥ የመጀመሪያውን የተደገፈ ቋንቋ ይጠቀማሉ።"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ለእያንዳንዱ መተግበሪያ ቋንቋ ለመምረጥ ወደ መተግበሪያ ቋንቋ ቅንብሮች ይሂዱ።"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ስለቋንቋዎች የበለጠ ይረዱ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">የተመረጡት ቋንቋዎች ይወገዱ?</item>
       <item quantity="other">የተመረጡት ቋንቋዎች ይወገዱ?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ጽሁፍ በሌላ ቋንቋ ይታያል።"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ሁሉንም ቋንቋዎች ማስወገድ አይቻልም"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ቢያንስ አንድ የተመረጠ ቋንቋ ያቆዩ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"እንደ የስርዓት ቋንቋ አይገኝም"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"በአንዳንድ መተግበሪያዎች ውስጥ ላይገኝ ይችላል"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ወደ ላይ ውሰድ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ወደ ታች ውሰድ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ወደ ላይ ውሰድ"</string>
