--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Пропускане"</string>
     <string name="next_label" msgid="1248293387735652187">"Напред"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Езици"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ред на предпочитаните езици"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Системен език"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Премахване"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Добавяне на език"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Език"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Предпочитан език"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Езици за приложенията"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Езици за приложенията"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Задаване на език за всяко приложение"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Език за приложенията"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Език на приложението"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Предложени езици"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Всички езици"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системен език"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Избирането на език за това приложение не е налице от настройките."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Езикът може да се различава от езиците, налични в приложението. Възможно е някои приложения да не поддържат тази настройка."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Тук са показани само приложенията, които поддържат избиране на език."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Системата, приложенията и уебсайтовете използват първия поддържан език от тези, които предпочитате."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"За да изберете език за всяко отделно приложение, отворете съответните настройки."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Научете повече за езиците"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Да се премахнат ли избраните езици?</item>
       <item quantity="one">Да се премахне ли избраният език?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текстът ще се показва на друг език."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Не могат да се премахнат всички езици"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Запазете поне един предпочитан език"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Не е налице като системен език"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Може да не е налице в някои приложения"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Преместване нагоре"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Преместване надолу"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Преместване най-горе"</string>
