--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Spring over"</string>
     <string name="next_label" msgid="1248293387735652187">"Næste"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Sprog"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Rækkefølgen af foretrukne sprog"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systemsprog"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Fjern"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Tilføj et sprog"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Sprog"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Foretrukket sprog"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Appsprog"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Appsprog"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Angiv sprog for hver app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Appsprog"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Appsprog"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Foreslåede sprog"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle sprog"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systemsprog"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Sprogvalg for denne app er ikke tilgængeligt i Indstillinger."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Sproget kan adskille sig fra sprogene i appen. Nogle apps understøtter muligvis ikke denne indstilling."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Her vises kun apps, der understøtter sprogvalg."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Dit system, dine apps og dine websites anvender det første understøttede sprog fra dine foretrukne sprog."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Hvis du vil vælge et sprog for hver app, skal du gå til den pågældende apps sprogindstillinger."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Få flere oplysninger om sprog"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Vil du fjerne det valgte sprog?</item>
       <item quantity="other">Vil du fjerne de valgte sprog?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Al tekst vises på et andet sprog."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Du kan ikke fjerne alle sprog."</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behold mindst ét foretrukket sprog"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ikke tilgængeligt som systemsprog"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Det er muligvis ikke tilgængeligt i alle apps"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Flyt op"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Flyt ned"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flyt til toppen"</string>
