--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Παραβλέψη"</string>
     <string name="next_label" msgid="1248293387735652187">"Επόμενο"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Γλώσσες"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Σειρά προτιμώμενων γλωσσών"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Γλώσσα συστήματος"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Κατάργηση"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Προσθήκη γλώσσας"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Γλώσσα"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Προτιμώμενη γλώσσα"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Γλώσσες εφαρμογής"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Γλώσσες εφαρμογής"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ορίστε τη γλώσσα για κάθε εφαρμογή"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Γλώσσα εφαρμογής"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Γλώσσα εφαρμογής"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Προτεινόμενες γλώσσες"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Όλες οι γλώσσες"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Γλώσσα συστήματος"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Η δυνατότητα επιλογής γλώσσας για αυτήν την εφαρμογή δεν είναι διαθέσιμη από τις Ρυθμίσεις."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Η γλώσσα μπορεί να διαφέρει από τις γλώσσες που είναι διαθέσιμες στην εφαρμογή. Ορισμένες εφαρμογές μπορεί να μην υποστηρίζουν αυτήν τη ρύθμιση."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Εδώ εμφανίζονται μόνο εφαρμογές που υποστηρίζουν την επιλογή γλώσσας."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Το σύστημα, οι εφαρμογές και οι ιστότοποι χρησιμοποιούν την πρώτη υποστηριζόμενη γλώσσα από τις προτιμώμενες γλώσσες σας."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Για να επιλέξετε μια γλώσσα για κάθε εφαρμογή, μεταβείτε στις ρυθμίσεις γλώσσας εφαρμογών."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Μάθετε περισσότερα για τις γλώσσες"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Να αφαιρεθούν οι επιλεγμένες γλώσσες;</item>
       <item quantity="one">Να αφαιρεθεί η επιλεγμένη γλώσσα;</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Το κείμενο θα προβληθεί σε άλλη γλώσσα."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Δεν είναι δυνατή η κατάργηση όλων των γλωσσών"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Θα πρέπει να διατηρήσετε τουλάχιστον μία προτιμώμενη γλώσσα"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Δεν είναι διαθέσιμη ως γλώσσα συστήματος"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ενδέχεται να μην είναι διαθέσιμο σε ορισμένες εφαρμογές"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Μετακίνηση επάνω"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Μετακίνηση κάτω"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Μετακίνηση επάνω"</string>
