--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Ohita"</string>
     <string name="next_label" msgid="1248293387735652187">"Seuraava"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Kielet"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ensisijaisten kielten järjestys"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Järjestelmän kieli"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Poista"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Lisää kieli"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Kieli"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Ensisijainen kieli"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Sovellusten kielet"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Sovellusten kielet"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Valitse kieli kullekin sovellukselle"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Sovelluksen kieli"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Sovelluksen kieli"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Kieliehdotukset"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Kaikki kielet"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Järjestelmän kieli"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Sovellukselle ei voi valita kieltä asetuksista."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Kieli saattaa erota sovelluksessa saatavilla olevista kielistä. Jotkin sovellukset eivät ehkä tue tätä asetusta."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Täällä näkyvät vain sovellukset, jotka tukevat kielen valitsemista."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Järjestelmä, sovellukset ja verkkosivustot käyttävät valitsemistasi kielistä ensimmäistä, jota tuetaan."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Voit valita kielen kullekin sovellukselle sen kieliasetuksista."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Lue lisää kielistä"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Poistetaanko valitut kielet?</item>
       <item quantity="one">Poistetaanko valittu kieli?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teksti näytetään toisella kielellä."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kaikkia kieliä ei voi poistaa"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Jätä ainakin yksi ensisijainen kieli"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ei saatavilla järjestelmän kieleksi"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ei ehkä ole saatavilla kaikissa sovelluksissa"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Siirrä ylöspäin"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Siirrä alaspäin"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Siirrä ylimmäksi"</string>
