--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Salta"</string>
     <string name="next_label" msgid="1248293387735652187">"Avanti"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Lingue"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ordine delle lingue preferite"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Lingua di sistema"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Rimuovi"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Aggiungi una lingua"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Lingua"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Lingua preferita"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Lingue delle app"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Lingue delle app"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Imposta la lingua di ogni app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Lingua dell\'app"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Lingua dell\'app"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Lingue suggerite"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Tutte le lingue"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Lingua di sistema"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"La selezione della lingua per questa app non è disponibile nelle Impostazioni."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"La lingua potrebbe essere diversa dalle lingue disponibili nell\'app. Alcune app potrebbero non supportare questa impostazione."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Qui vengono mostrate soltanto le app che supportano la selezione della lingua."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Per il sistema, le app e i siti web viene usata la prima lingua supportata delle tue lingue preferite."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Per selezionare una lingua per ogni app, vai alle impostazioni della lingua delle app."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Scopri di più sulle lingue"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Rimuovere le lingue selezionate?</item>
       <item quantity="one">Rimuovere la lingua selezionata?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Il testo verrà mostrato in un\'altra lingua."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Impossibile rimuovere tutte le lingue"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Mantieni almeno una lingua preferita"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Non disponibile come lingua di sistema"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Potrebbe non essere disponibile in alcune app"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Sposta su"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Sposta giù"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Sposta all\'inizio"</string>
