--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Өткізіп жіберу"</string>
     <string name="next_label" msgid="1248293387735652187">"Келесі"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Тілдер"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Қолданатын тілдер реті"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Жүйе тілі"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Жою"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Тіл қосу"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Тіл"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Қолданатын тіл"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Қолданба тілдері"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Қолданба тілдері"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Әр қолданбаның тілін орнату"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Қолданба тілі"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Қолданба тілі"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Ұсынылған тілдер"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Барлық тіл"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Жүйе тілі"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Бұл қолданба үшін \"Параметрлер\" бөлімінен тіл таңдау мүмкіндігі қолжетімсіз."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Тілдер қолданбадағы тілдерден өзгеше болуы мүмкін. Кейбір қолданба бұл параметрді қолдамауы мүмкін."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Мұнда тіл таңдау мүмкіндігі бар қолданбалар ғана көрсетілген."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Құрылғыңыздың жүйесі, ондағы қолданбалар мен веб-сайттар өзіңіз қолданатын тілдердің ішіндегі қолдау көрсетілетін алғашқы тілді пайдаланады."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Әр қолданбаның өз тілін таңдау үшін сол қолданбаның тіл параметрлеріне өтіңіз."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Тілдер туралы толық ақпарат алыңыз"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Таңдалған тілдерді жою керек пе?</item>
       <item quantity="one">Таңдалған тілді жою керек пе?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Мәтін басқа тілде көрсетіледі."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Барлық тілдерді жою мүмкін емес"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Кемінде бір таңдаулы тілді сақтау"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Жүйе бұл тілге аударылмаған."</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Кейбір қолданбаларда қолжетімді болмауы мүмкін"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Жоғары қарай жылжыту"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Төмен қарай жылжыту"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Басына жылжыту"</string>
