--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"건너뛰기"</string>
     <string name="next_label" msgid="1248293387735652187">"다음"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"언어"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"선호 언어 순서"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"시스템 언어"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"삭제"</string>
     <string name="add_a_language" msgid="2126220398077503271">"언어 추가"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"언어"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"기본 언어"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"앱 언어"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"앱 언어"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"각 앱의 언어 설정"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"앱 언어"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"앱 언어"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"추천 언어"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"모든 언어"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"시스템 언어"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"설정에서 이 앱의 언어를 선택할 수 없습니다."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"언어가 앱에서 사용 가능한 언어와 다를 수 있습니다. 일부 앱에서는 이 설정을 지원하지 않을 수도 있습니다."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"언어 선택을 지원하는 앱만 여기에 표시됩니다."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"시스템, 앱, 웹사이트는 선호하는 언어 중 최우선 지원 언어를 사용합니다."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"앱별로 언어를 선택하려면 앱 언어 설정으로 이동하세요."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"언어 자세히 알아보기"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">선택한 언어를 삭제하시겠습니까?</item>
       <item quantity="one">선택한 언어를 삭제하시겠습니까?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"텍스트가 다른 언어로 표시됩니다."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"모든 언어를 삭제할 수는 없습니다."</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"기본 언어를 하나 이상 유지해야 합니다."</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"시스템 언어로 사용할 수 없음"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"일부 앱에서 사용하지 못할 수 있습니다."</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"위로 이동"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"아래로 이동"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"맨 위로 이동"</string>
