--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Overslaan"</string>
     <string name="next_label" msgid="1248293387735652187">"Volgende"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Talen"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Volgorde van voorkeurstalen"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systeemtaal"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Verwijderen"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Taal toevoegen"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Taal"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Taalvoorkeur"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"App-talen"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"App-talen"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"De taal instellen voor elke app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"App-taal"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"App-taal"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Voorgestelde talen"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle talen"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systeemtaal"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Taalselectie voor deze app is niet beschikbaar via Instellingen."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"De taal kan verschillen van de beschikbare talen in de app. Sommige apps ondersteunen deze instelling mogelijk niet."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hier zie je alleen apps die taalselectie ondersteunen."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Je systeem, apps en websites gebruiken de eerste ondersteunde taal uit je voorkeurstalen."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ga naar de taalinstellingen van een app als je een taal voor elke app wilt selecteren."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Meer informatie over talen"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Geselecteerde talen verwijderen?</item>
       <item quantity="one">Geselecteerde taal verwijderen?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst wordt getoond in een andere taal."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kan niet alle talen verwijderen"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behoud minimaal één voorkeurstaal"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Niet beschikbaar als systeemtaal"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Mogelijk niet beschikbaar in sommige apps"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Omhoog"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Omlaag"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Bovenaan zetten"</string>
