--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Hoppa över"</string>
     <string name="next_label" msgid="1248293387735652187">"Nästa"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Språk"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Rangordning av föredragna språk"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systemets språkinställning"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Ta bort"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Lägg till ett språk"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Språk"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Önskat språk"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Appspråk"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Appspråk"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ställ in språket för varje app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Appspråk"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Appspråk"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Föreslagna språk"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alla språk"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systemets språkinställning"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Det går inte att välja språk för den här appen i Inställningar."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Alla språk kanske inte är tillgängliga i appen. Vissa appar kanske inte har stöd för denna inställning."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Endast appar som har stöd för språkval visas här."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Systemet, apparna och webbplatserna använder det första språket som stöds från din lista över föredragna språk."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Gå till en apps inställningar för att välja språk i den."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Läs mer om språk"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Vill du ta bort de valda språken?</item>
       <item quantity="one">Vill du ta bort det valda språket?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Text visas på ett annat språk."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Det går inte att ta bort alla språk"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Minst ett önskat språk måste finnas kvar"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Inte tillgängligt som systemets språkinställning"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Kanske inte är tillgängligt i alla appar"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Flytta uppåt"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Flytta nedåt"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flytta högst upp"</string>
