--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Ruka"</string>
     <string name="next_label" msgid="1248293387735652187">"Endelea"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Lugha"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Mpangilio wa lugha unayopendelea"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Lugha ya mfumo"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Ondoa"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Ongeza lugha nyingine"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Lugha"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Lugha Inayopendelewa"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Lugha za programu"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Lugha za Programu"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Weka lugha ya kila programu"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Lugha ya programu"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Lugha ya Programu"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Lugha zinazopendekezwa"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Lugha zote"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Lugha ya mfumo"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Chaguo la lugha kwa programu hii halipatikani kwenye Mipangilio."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Huenda lugha ikatofautiana na zinazopatikana katika programu. Huenda baadhi ya programu zisiwe na uwezo wa kutumia mipangilio hii."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Programu zinazoruhusu kuteua lugha ndizo zinazoonyeshwa hapa."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Mfumo wako, programu na tovuti hutumia lugha ya kwanza inayotumika katika chaguo za lugha unazozipendelea."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ili uchague lugha kwa kila programu, nenda kwenye mipangilio ya lugha ya programu."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Pata maelezo zaidi kuhusu lugha"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Ungependa kuondoa lugha zilizochaguliwa?</item>
       <item quantity="one">Ungependa kuondoa lugha iliyochaguliwa?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Maandishi yataonyeshwa katika lugha nyingine."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Haiwezi kuondoa lugha zote"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Hifadhi angalau lugha moja unayopendelea"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Haipatikani kama lugha ya mfumo"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Huenda isipatikane katika baadhi ya programu"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Sogeza juu"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Sogeza chini"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Hamishia juu"</string>
