--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Laktawan"</string>
     <string name="next_label" msgid="1248293387735652187">"Susunod"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Mga Wika"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Pagkakasunod-sunod ng gustong wika"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Wika ng system"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Alisin"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Magdagdag ng wika"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Wika"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Gustong Wika"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Mga wika ng app"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Mga Wika ng App"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Itakda ang wika para sa bawat app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Wika ng app"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Wika ng App"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Mga iminumungkahing wika"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Lahat ng wika"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Wika ng system"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Hindi available sa Mga Setting ang pagpili ng wika para sa app na ito."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Posibleng iba ang wika sa mga wikang available sa app. Posibleng hindi suportahan ng ilang app ang setting na ito."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Mga app lang na sumusuporta sa pagpili ng wika ang ipinapakita dito."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Ginagamit ng iyong system, mga app, at mga website ang unang sinusuportahang wika mula sa mga gusto mong wika."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Para pumili ng wika para sa bawat app, pumunta sa mga setting ng wika ng app."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Matuto pa tungkol sa mga wika"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Alisin ang mga piniling wika?</item>
       <item quantity="other">Alisin ang mga piniling wika?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Ipapakita ang text sa ibang wika."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Hindi maaalis ang lahat ng wika"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Magtira ng kahit isang gustong wika"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Hindi available bilang wika ng system"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Maaaring hindi available sa ilang app"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Ilipat pataas"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Ilipat pababa"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Ilipat sa itaas"</string>
