--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -216,15 +216,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Atla"</string>
     <string name="next_label" msgid="1248293387735652187">"İleri"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Diller"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Tercih edilen dil sırası"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Sistem dili"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Kaldır"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Dil ekle"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Dil"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Tercih Edilen Dil"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Uygulama dilleri"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Uygulama dilleri"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Her uygulamanın dilini ayarlayın"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Uygulama dili"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Uygulama Dili"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Önerilen diller"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Tüm diller"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistem dili"</string>
@@ -232,9 +230,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Ayarlar\'da bu uygulama için dil seçimi mevcut değil."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Dil, uygulamada bulunan dillerden farklı olabilir. Bazı uygulamalar bu ayarı desteklemeyebilir."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Yalnızca dil seçimini destekleyen uygulamalar burada görünür."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sisteminiz, uygulamalarınız ve web siteleriniz, tercih ettiğiniz diller arasındaki ilk desteklenen dili kullanır."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Her uygulamaya özel bir dil seçmek için uygulama dil ayarlarına gidin."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Diller hakkında daha fazla bilgi"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Seçilen diller kaldırılsın mı?</item>
       <item quantity="one">Seçilen dil kaldırılsın mı?</item>
@@ -242,7 +237,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Metin başka bir dilde görüntülenecek."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Tüm diller kaldırılamaz"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Tercih edilen en az dil bırakın"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Sistem dili olarak mevcut değil"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Bazı uygulamalarda kullanılamayabilir"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Yukarı taşı"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Aşağı taşı"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"En üste taşı"</string>
